[package]
name = "krithon-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive", "env"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["client", "http1"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
pest = "2.7.15"
pest_derive = "2.7.15"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tlsn-common = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7", version = "0.1.0-alpha.7" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7", version = "0.1.0-alpha.7" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7", version = "0.1.0-alpha.7" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7", version = "0.1.0-alpha.7" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
url = { version = "2.4.0", features = ["serde"] }